Fixed divider on Mobile

--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ body {
   text-align: center;
 }
 
+picture {
+  padding: 0 25px;
+}
+
 #dice {
   display: flex;
   align-items: center;
